refactor: Adicionado Respostas HTTP padronizadas